--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -189,7 +189,9 @@ h2{
 
 #footer {
     text-align: center;
-    padding: 0 15%;
+    padding: 0.5% 15%;
+    background: #3c2f81;
+    color: #fff;
 }
 
 @media (max-width: 990px) {
